--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <option value="Planejamento">Planejamento</option>
             </select>
 
+            <label>Ano:</label>
+            <input type="number" id="ano" min="1900" max="2100" required>
+
             <label">Status:</label>
 
             <select id="status">
@@ -30,7 +33,7 @@
             </select>
 
             <label> Data de Envio:</label>
-            <input type="datetime-local" id="nome_responsavel" required>
+            <input type="datetime-local" id="data_envio" required>
         </fieldset>
 
         <fieldset>
